src/test/test-workspace/invalid_configs/100_CONFIG_BLOCK_ERRORS.sqlx
config {
    type: "unknown_type",
    database: 123,
    schema: true,
    name: "invalid.name",
    columns: "invalid_string",
    tags: "string_should_be_array",
    hasOutput: "true",
    materialized: 123,
    onSchemaChange: "INVALID_MODE",
    invalidProp: "some_value",
    assertions: "invalid_string",
    bigquery: {
        partitionBy: 123,
        clusterBy: "string",
        requirePartitionFilter: "true",
        partitionExpirationDays: "30",
        labels: "string_invalid",
        invalidBqProp: "val"
    }
}
select 1 as test
